<resources>
    <string name="app_name">MAP524As1</string>
    <string name="as1">Assignment 1</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="advance">Advance-With History</string>
    <string name="standard">Standard</string>
    <string name="percent">%</string>
    <string name="pow">Pow</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
</resources>